tests/ui/type-alias-impl-trait/in-assoc-ty-early-bound2.stderr
error[E0792]: expected generic lifetime parameter, found `'_`
  --> $DIR/in-assoc-ty-early-bound2.rs:15:20
   |
LL |     type Assoc<'a> = impl Sized;
   |                -- this generic parameter must be used with a generic lifetime parameter
...
LL |             let _: Self::Assoc<'a> = x;
   |                    ^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0792`.
